2009-10-05  Doug Kwan  <dougkwan@google.com>

PR rtl-optimization/41574
	Index: combine.c (distribute_and_simplify_rtx): Quit if RTX mode is
	floating point and we are not doing unsafe math optimizations.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@152443 138bc75d-0d04-0410-961f-82ee72b054a4